--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/three": "^0.130.1",
+    "node-sass": "5.0.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
+    "react-colorful": "^5.3.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "three": "^0.131.2",
